--- a/index.html
+++ b/index.html
@@ -69,13 +69,9 @@
         </div>
         <div class="about-me-text"> 
             <p>
-                I was born and raised in Riverton, Utah and I am the oldest of 7 kids. I love the outdoors, sports, and spending time with my wife and family. Whenever the BYU football team is playing you can bet that’ll be watching the game at my in-laws. We currently live in Provo while my wife finishes up her BS degree from Utah Valley University. </br>
+                I am a Full Stack Developer with experience in User Experience, UX Design, Customer Journey Mapping, and focusing on the customer to find their needs. I attended the BYU Marriot School of Business where I received my BS in Experience and Design Management. I am attending and will receive a certificate in Full Stack Web Development from the University of Utah.</br>
                 <br>
-                I graduated from BYU Marriot School of Business in December of 2020 with my undergrad in Experience and Design Management. This degree focused on creating a positive journey for customers, CX Design, UX Design, management, and social media management and marketing.</br>
-                <br>
-                After graduating from Brigham Young University, I decided to make a change and study software engineering by attending a 6-month bootcamp offered by the University of Utah. I have always enjoyed creating and designing and I discovered that web development could be an exciting career to get into that would allow me to create and use my other skills to better the lives of others and provide a good life for my family. </br>
-                <br>
-                Feel free to reaching out to me about career opportunities or just connect on LinkedIn!  
+                I fully believe that I am the master of my own fate, which is why when I am not coding or working, I am spending time with my wife, preparing for our future and spending time to relax, re-engage, and connect with my family. </br>
             </p>
         </div>  
     </section>
