--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="./assets/David resume 2.0.pdf" target="_blank">Resume</a>
+                    <a href="./assets/David McDougal Developer Resume.pdf" target="_blank">Resume</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/mcdougaldavid/" target="_blank">LinkedIn</a>
