--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="contact-info">
                 <ul>
                     <li><a>Phone: 385.288.7920</a></li>
-                    <li><a href="mailto:davidbyu6@gmail.com">Email: davidbyu6@gmail.com</a></li>
+                    <li><a href="mailto:david.mcdougal00@gmail.com">Email: david.mcdougal00@gmail.com</a></li>
                     <li><a href="https://www.linkedin.com/in/mcdougaldavid/">LinkedIn</a></li>
                 </ul>
         </div>
